--- a/modules/login/views/login.html
+++ b/modules/login/views/login.html
@@ -49,18 +49,18 @@
                                         <a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
                                     </div>
                                     or
-                                    <form class="form" role="form" method="post" action="" accept-charset="UTF-8" id="login-nav">
+                                    <form class="form" role="form" method="post" action="" accept-charset="UTF-8" id="login-nav" ng-controller="LoginController">
                                         <div class="form-group">
                                             <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                                            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required ng-model="email">{{email}}
+                                            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required ng-model="email">
                                         </div>
                                         <div class="form-group">
                                             <label class="sr-only" for="exampleInputPassword2">Password</label>
-                                            <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required ng-model="password">{{password}}
+                                            <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required ng-model="password">
                                             <div class="help-block text-right"><a href="">Forget the password ?</a></div>
                                         </div>
                                         <div class="form-group">
-                                            <button type="submit" class="btn btn-primary btn-block" ng-click="">Sign in</button>
+                                            <button type="submit" class="btn btn-primary btn-block" ng-click="Login(email, password)">Sign in</button>
                                         </div>
                                         <div class="checkbox">
                                             <label>
